crates/ditto-checker/tests/golden/type-errors/effect_unification_error_0.ditto
module Test exports (..)

not_an_effect = do {
    huh <- 5;
    return unit
}
